TEST_PROGRAMS/INVALID/daniel_pham/i1.min
# Illegal numbers
x = 003.12

